added openapi and auth
